# bot-dashboard

./: .gitignore  README.md  app.py  bot-dashboard.service  config.py  documentation.md  manager.py  pyproject.toml
mock-bots/: bot_err.py  bot_ok.py  pyproject.toml
static/: app.js  index.html  style.css
